# EDR-POC

./: .clang-format  .editorconfig  .gitignore  .golangci.yml  EDR-PROJECT-CONTEXT.md  Makefile  README.md  commitlint.config.js  package.json  pnpm-lock.yaml  tasks.json  决策项.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  integration.yml  license.yml  lint.yml
agent/core-c/: CMakeLists.txt  README.md
agent/core-c/include/: edr_core.h  edr_errors.h  edr_events.h  edr_log.h  event_buffer.h  pal.h
agent/core-c/src/collector/: CMakeLists.txt  event_buffer.c
agent/core-c/src/collector/windows/: etw_process.c  etw_process.h  etw_session.c  etw_session.h
agent/core-c/src/common/: edr_core.c  edr_errors.c  edr_log.c
agent/core-c/src/pal/: pal_linux.c  pal_macos.c  pal_windows.c
agent/core-c/src/plugin/: module_manager.c  module_manager.h
agent/core-c/src/queue/: ring_buffer.c  ring_buffer.h
agent/core-c/tests/: CMakeLists.txt  etw_process_test.c  etw_session_test.c  event_buffer_test.c  module_manager_test.c  pal_test.c  ring_buffer_test.c
agent/main-go/: Makefile  README.md  TROUBLESHOOTING.md  diagnose.ps1  diagnose.sh  go.mod  go.sum  start-agent.bat
agent/main-go/cmd/agent/: main.go
agent/main-go/configs/: agent.yaml  agent.yaml.example
agent/main-go/internal/cgo/: callback.go  callback_stub.go  callback_windows.go  collector_windows.go  collector_windows_test.go  core.go  core_test.go  types_stub.go
agent/main-go/internal/collector/: config.go
agent/main-go/internal/comm/: client.go  comm_test.go  command.go  connection.go  heartbeat.go  policy.go
agent/main-go/internal/config/: config.go  config_test.go  loader.go
agent/main-go/internal/event/: converter.go  converter_test.go
agent/main-go/internal/log/: logger.go  logger_test.go
agent/main-go/tests/: performance_test.go
agent/main-go/tests/integration/: process_collector_integration_test.go
cloud/: README.md  coverage.out  edr_assets.db  go.mod  go.sum
cloud/cmd/alert-manager/: main.go
cloud/cmd/api-gateway/: database_init.go  main.go
cloud/cmd/detection-engine/: main.go
cloud/cmd/event-processor/: main.go
cloud/configs/: database.yaml  grpc.yaml  kafka.yaml  pipeline.yaml
cloud/internal/asset/: agent_status.go  agent_status_test.go  api.go  changelog.go  dto.go  errors.go  group.go  group_test.go  models.go  monitor.go  monitor_test.go  repository.go  repository_test.go  service.go  service_test.go  software.go  software_test.go
cloud/internal/config/: grpc_config.go  kafka.go  kafka_test.go
cloud/internal/event/: consumer.go  consumer_test.go  dlq.go  dlq_test.go  errors.go  health.go  health_test.go  integration_test.go  metrics.go  metrics_test.go  producer.go  producer_test.go  topic_manager.go  topic_manager_test.go  types.go  types_test.go
cloud/internal/grpc/: agent_service.go  agent_service_test.go  server.go  server_test.go
cloud/internal/grpc/interceptors/: auth.go  interceptors_test.go  logging.go  metrics.go  recovery.go
cloud/internal/pipeline/: README.md  batch.go  batch_test.go  config.go  errors.go  metrics.go  normalizer.go  normalizer_test.go  pipeline.go  pipeline_test.go
cloud/internal/pipeline/ecs/: file.go  mapper.go  mapper_test.go  network.go  process.go  types.go
cloud/internal/pipeline/enricher/: agent.go  asset.go  enricher.go  enricher_test.go  geoip.go
cloud/internal/pipeline/writer/: kafka.go  opensearch.go  writer_test.go
cloud/internal/repository/: alert_repository.go  alert_repository_impl.go  errors.go  policy_repository.go  policy_repository_impl.go  scopes.go  tenant_repository.go  tenant_repository_impl.go  tenant_repository_test.go  user_repository.go  user_repository_impl.go
cloud/internal/repository/models/: alert.go  common.go  policy.go  tenant.go  user.go
cloud/migrations/: 000002_create_asset_tables.down.sql  000002_create_asset_tables.up.sql  000003_create_tenant_tables.down.sql  000003_create_tenant_tables.up.sql  000004_create_user_tables.down.sql  000004_create_user_tables.up.sql  000005_create_policy_tables.down.sql  000005_create_policy_tables.up.sql  000006_create_alert_tables.down.sql  000006_create_alert_tables.up.sql
cloud/pkg/auth/: auth_test.go  mtls.go  token.go
cloud/pkg/database/: config.go  db.go  health.go  metrics.go  migrate.go  transaction.go
cloud/pkg/opensearch/: bulk.go  bulk_test.go  client.go  client_test.go  config.go  errors.go  index.go  index_test.go  metrics.go  options.go  query.go  query_test.go
cloud/pkg/proto/edr/v1/: agent.pb.go  (+1 more)
cloud/tests/integration/: asset_integration_test.go  asset_service_integration_test.go  grpc_integration_test.go  opensearch_test.go  repository_test.go
cloud/tests/pipeline/: benchmark_test.go  integration_test.go
console/: .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
console/src/: App.test.tsx  App.tsx  index.css  main.tsx  router.tsx
console/src/api/: README.md  auth.ts  client.ts  dashboard.ts  endpoints.ts  index.ts  types.ts
console/src/api/__mocks__/: dashboard.ts
console/src/components/: ProtectedRoute.tsx
console/src/components/Layout/: MainLayout.tsx
console/src/components/charts/: BaseChart.tsx  G6Graph.tsx  HeatmapChart.tsx  LineChart.tsx  PieChart.tsx  index.ts
console/src/hooks/: index.ts  useAuth.ts  useDashboard.ts
console/src/pages/: AlertsPage.tsx  DashboardPage.tsx  EventsPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PoliciesPage.tsx  SettingsPage.tsx  index.ts
console/src/stores/: authStore.ts  dashboardStore.ts  endpoints.ts  index.ts
console/src/types/: dashboard.ts  endpoint.ts  index.ts
console/src/utils/: index.ts  storage.ts
deploy/certs/: ca.srl
deploy/docker/: .env.example  docker-compose.yml
deploy/kubernetes/opensearch/: configmap.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  statefulset.yaml
docs/: API.md  DEPLOYMENT.md  TESTING.md
proto/: buf.gen.yaml  buf.yaml
proto/edr/v1/: agent.proto  common.proto
scripts/: gen-dev-certs.sh  health-check.sh  license-check.sh  proto-gen.sh  setup.sh
(+27 files in other folders)
